adding output blocks for imaginary parts

--- a/model_files/cCMSSM/FlexibleSUSY.m.in
+++ b/model_files/cCMSSM/FlexibleSUSY.m.in
@@ -88,13 +88,15 @@ ExtraSLHAOutputBlocks = {
             {1, Hold[SUSYScale]},
             {2, Hold[LowScale]} } },
    {ALPHA, {{ArcSin[Pole[ZH[2,2]]]}}},
-   {HMIX , {{1, \[Mu]},
+   {HMIX , {{1, Re[\[Mu]]},
             {2, vu / vd},
             {3, Sqrt[vu^2 + vd^2]},
             {4, M[Ah[2]]^2},
-            {101, B[\[Mu]]},
+            {101, Re[B[\[Mu]]]},
             {102, vd},
             {103, vu} } },
+   {ImHMIX,{{1, Im[\[Mu]]},
+            {101, Im[B[\[Mu]]]} } },
    {Au,    {{1, 1, Re[T[Yu][1,1] / Yu[1,1]]},
             {2, 2, Re[T[Yu][2,2] / Yu[2,2]]},
             {3, 3, Re[T[Yu][3,3] / Yu[3,3]]} } },
@@ -104,6 +106,15 @@ ExtraSLHAOutputBlocks = {
    {Ae,    {{1, 1, Re[T[Ye][1,1] / Ye[1,1]]},
             {2, 2, Re[T[Ye][2,2] / Ye[2,2]]},
             {3, 3, Re[T[Ye][3,3] / Ye[3,3]]} } },
+   {ImAu,  {{1, 1, Im[T[Yu][1,1] / Yu[1,1]]},
+            {2, 2, Im[T[Yu][2,2] / Yu[2,2]]},
+            {3, 3, Im[T[Yu][3,3] / Yu[3,3]]} } },
+   {ImAd,  {{1, 1, Im[T[Yd][1,1] / Yd[1,1]]},
+            {2, 2, Im[T[Yd][2,2] / Yd[2,2]]},
+            {3, 3, Im[T[Yd][3,3] / Yd[3,3]]} } },
+   {ImAe,  {{1, 1, Im[T[Ye][1,1] / Ye[1,1]]},
+            {2, 2, Im[T[Ye][2,2] / Ye[2,2]]},
+            {3, 3, Im[T[Ye][3,3] / Ye[3,3]]} } },
    {MSOFT, {{1, Re[MassB]},
             {2, Re[MassWB]},
             {3, Re[MassG]},
@@ -123,5 +134,24 @@ ExtraSLHAOutputBlocks = {
             {46, Sqrt[Re[mu2[3,3]]]},
             {47, Sqrt[Re[md2[1,1]]]},
             {48, Sqrt[Re[md2[2,2]]]},
-            {49, Sqrt[Re[md2[3,3]]]} } }
+            {49, Sqrt[Re[md2[3,3]]]} } },
+   {ImMSOFT,
+           {{1, Im[MassB]},
+            {2, Im[MassWB]},
+            {3, Im[MassG]},
+            {31, Sqrt[Im[ml2[1,1]]]},
+            {32, Sqrt[Im[ml2[2,2]]]},
+            {33, Sqrt[Im[ml2[3,3]]]},
+            {34, Sqrt[Im[me2[1,1]]]},
+            {35, Sqrt[Im[me2[2,2]]]},
+            {36, Sqrt[Im[me2[3,3]]]},
+            {41, Sqrt[Im[mq2[1,1]]]},
+            {42, Sqrt[Im[mq2[2,2]]]},
+            {43, Sqrt[Im[mq2[3,3]]]},
+            {44, Sqrt[Im[mu2[1,1]]]},
+            {45, Sqrt[Im[mu2[2,2]]]},
+            {46, Sqrt[Im[mu2[3,3]]]},
+            {47, Sqrt[Im[md2[1,1]]]},
+            {48, Sqrt[Im[md2[2,2]]]},
+            {49, Sqrt[Im[md2[3,3]]]} } }
 };
