add preprocessor macro that allows model input parameter modification

--- a/templates/two_scale_susy_scale_constraint.cpp.in
+++ b/templates/two_scale_susy_scale_constraint.cpp.in
@@ -33,6 +33,7 @@
 namespace flexiblesusy {
 
 #define INPUTPARAMETER(p) inputPars.p
+#define MODELINPUTPARAMETER(p) model->get_input().p
 #define MODELPARAMETER(p) model->get_##p()
 #define BETAPARAMETER(p) beta_functions.get_##p()
 #define BETA(p) beta_##p
