set phase of mu in the susy scale constraint

--- a/model_files/cCMSSM/FlexibleSUSY.m.in
+++ b/model_files/cCMSSM/FlexibleSUSY.m.in
@@ -8,7 +8,7 @@ MINPAR = {
     {1, m0},
     {2, m12},
     {3, TanBeta},
-    {4, Phase[\[Mu]]},
+    {4, CosPhi},
     {5, Azero}
 };
 
@@ -20,7 +20,9 @@ SUSYScale = Sqrt[Product[M[Su[i]]^(Abs[ZU[i,3]]^2 + Abs[ZU[i,6]]^2), {i,6}]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
-SUSYScaleInput = {};
+SUSYScaleInput = {
+    {Phase[\[Mu]], Exp[I ArcCos[CosPhi]]}
+};
 
 HighScale = g1 == g2;
 
