--- a/templates/low_scale_spectrum_generator.hpp.in
+++ b/templates/low_scale_spectrum_generator.hpp.in
@@ -109,6 +109,13 @@ template <class T>
 void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
                                 const @ModelName@_input_parameters& input)
 {
+   model.clear();
+   model.set_input_parameters(input);
+   model.do_calculate_sm_pole_masses(calculate_sm_masses);
+   model.do_force_output(force_output);
+   model.set_loops(beta_loop_order);
+   model.set_thresholds(threshold_corrections_loop_order);
+
    susy_scale_constraint.clear();
    low_scale_constraint .clear();
 
@@ -116,8 +123,6 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
    susy_scale_constraint.set_model(&model);
    low_scale_constraint .set_model(&model);
 
-   susy_scale_constraint.set_input_parameters(input);
-   low_scale_constraint .set_input_parameters(input);
    low_scale_constraint .set_sm_parameters(oneset);
 
    susy_scale_constraint.initialize();
@@ -130,12 +135,6 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
    std::vector<Constraint<T>*> downward_constraints(2);
    downward_constraints[0] = &susy_scale_constraint;
    downward_constraints[1] = &low_scale_constraint;
-
-   model.set_input_parameters(input);
-   model.do_calculate_sm_pole_masses(calculate_sm_masses);
-   model.do_force_output(force_output);
-   model.set_loops(beta_loop_order);
-   model.set_thresholds(threshold_corrections_loop_order);
 
    @ModelName@_convergence_tester<T> convergence_tester(&model, precision_goal);
    if (max_iterations > 0)
