--- a/templates/two_scale_high_scale_constraint.hpp.in
+++ b/templates/two_scale_high_scale_constraint.hpp.in
@@ -36,7 +36,7 @@ template<>
 class @ModelName@_high_scale_constraint<Two_scale> : public Constraint<Two_scale> {
 public:
    @ModelName@_high_scale_constraint();
-   @ModelName@_high_scale_constraint(@ModelName@<Two_scale>*, const @ModelName@_input_parameters&);
+   @ModelName@_high_scale_constraint(@ModelName@<Two_scale>*);
    virtual ~@ModelName@_high_scale_constraint();
    virtual void apply();
    virtual double get_scale() const;
@@ -47,7 +47,6 @@ public:
    const @ModelName@_input_parameters& get_input_parameters() const;
    @ModelName@<Two_scale>* get_model() const;
    void initialize();
-   void set_input_parameters(const @ModelName@_input_parameters&);
    void set_scale(double); ///< fix unification scale (0 = unfixed)
 
 protected:
@@ -57,7 +56,6 @@ private:
    double scale;
    double initial_scale_guess;
    @ModelName@<Two_scale>* model;
-   @ModelName@_input_parameters inputPars;
 };
 
 } // namespace flexiblesusy
