--- a/templates/two_scale_susy_scale_constraint.hpp.in
+++ b/templates/two_scale_susy_scale_constraint.hpp.in
@@ -36,7 +36,7 @@ template<>
 class @ModelName@_susy_scale_constraint<Two_scale> : public Constraint<Two_scale> {
 public:
    @ModelName@_susy_scale_constraint();
-   @ModelName@_susy_scale_constraint(@ModelName@<Two_scale>*, const @ModelName@_input_parameters&);
+   @ModelName@_susy_scale_constraint(@ModelName@<Two_scale>*);
    virtual ~@ModelName@_susy_scale_constraint();
    virtual void apply();
    virtual double get_scale() const;
@@ -47,7 +47,6 @@ public:
    const @ModelName@_input_parameters& get_input_parameters() const;
    @ModelName@<Two_scale>* get_model() const;
    void initialize();
-   void set_input_parameters(const @ModelName@_input_parameters&);
 
 protected:
    void update_scale();
@@ -56,7 +55,6 @@ private:
    double scale;
    double initial_scale_guess;
    @ModelName@<Two_scale>* model;
-   @ModelName@_input_parameters inputPars;
 };
 
 } // namespace flexiblesusy
