--- a/templates/two_scale_initial_guesser_low_scale_model.cpp.in
+++ b/templates/two_scale_initial_guesser_low_scale_model.cpp.in
@@ -29,21 +29,19 @@
 
 namespace flexiblesusy {
 
-#define INPUTPARAMETER(p) input_pars.p
+#define INPUTPARAMETER(p) model->get_input().p
 #define MODELPARAMETER(p) model->get_##p()
 #define SM(p) Electroweak_constants::p
 #define MODEL model
 
 @ModelName@_initial_guesser<Two_scale>::@ModelName@_initial_guesser(
    @ModelName@<Two_scale>* model_,
-   const @ModelName@_input_parameters& input_pars_,
    const QedQcd& oneset_,
    const @ModelName@_low_scale_constraint<Two_scale>& low_constraint_,
    const @ModelName@_susy_scale_constraint<Two_scale>& susy_constraint_
 )
    : Initial_guesser<Two_scale>()
    , model(model_)
-   , input_pars(input_pars_)
    , oneset(oneset_)
    , mu_guess(0.)
    , mc_guess(0.)
