use SignedAbsSqrt[] to avoid nans in output

--- a/model_files/cCMSSM/FlexibleSUSY.m.in
+++ b/model_files/cCMSSM/FlexibleSUSY.m.in
@@ -122,38 +122,38 @@ ExtraSLHAOutputBlocks = {
             {3, Re[MassG]},
             {21, mHd2},
             {22, mHu2},
-            {31, Sqrt[Re[ml2[1,1]]]},
-            {32, Sqrt[Re[ml2[2,2]]]},
-            {33, Sqrt[Re[ml2[3,3]]]},
-            {34, Sqrt[Re[me2[1,1]]]},
-            {35, Sqrt[Re[me2[2,2]]]},
-            {36, Sqrt[Re[me2[3,3]]]},
-            {41, Sqrt[Re[mq2[1,1]]]},
-            {42, Sqrt[Re[mq2[2,2]]]},
-            {43, Sqrt[Re[mq2[3,3]]]},
-            {44, Sqrt[Re[mu2[1,1]]]},
-            {45, Sqrt[Re[mu2[2,2]]]},
-            {46, Sqrt[Re[mu2[3,3]]]},
-            {47, Sqrt[Re[md2[1,1]]]},
-            {48, Sqrt[Re[md2[2,2]]]},
-            {49, Sqrt[Re[md2[3,3]]]} } },
+            {31, SignedAbsSqrt[Re[ml2[1,1]]]},
+            {32, SignedAbsSqrt[Re[ml2[2,2]]]},
+            {33, SignedAbsSqrt[Re[ml2[3,3]]]},
+            {34, SignedAbsSqrt[Re[me2[1,1]]]},
+            {35, SignedAbsSqrt[Re[me2[2,2]]]},
+            {36, SignedAbsSqrt[Re[me2[3,3]]]},
+            {41, SignedAbsSqrt[Re[mq2[1,1]]]},
+            {42, SignedAbsSqrt[Re[mq2[2,2]]]},
+            {43, SignedAbsSqrt[Re[mq2[3,3]]]},
+            {44, SignedAbsSqrt[Re[mu2[1,1]]]},
+            {45, SignedAbsSqrt[Re[mu2[2,2]]]},
+            {46, SignedAbsSqrt[Re[mu2[3,3]]]},
+            {47, SignedAbsSqrt[Re[md2[1,1]]]},
+            {48, SignedAbsSqrt[Re[md2[2,2]]]},
+            {49, SignedAbsSqrt[Re[md2[3,3]]]} } },
    {ImMSOFT,
            {{1, Im[MassB]},
             {2, Im[MassWB]},
             {3, Im[MassG]},
-            {31, Sqrt[Im[ml2[1,1]]]},
-            {32, Sqrt[Im[ml2[2,2]]]},
-            {33, Sqrt[Im[ml2[3,3]]]},
-            {34, Sqrt[Im[me2[1,1]]]},
-            {35, Sqrt[Im[me2[2,2]]]},
-            {36, Sqrt[Im[me2[3,3]]]},
-            {41, Sqrt[Im[mq2[1,1]]]},
-            {42, Sqrt[Im[mq2[2,2]]]},
-            {43, Sqrt[Im[mq2[3,3]]]},
-            {44, Sqrt[Im[mu2[1,1]]]},
-            {45, Sqrt[Im[mu2[2,2]]]},
-            {46, Sqrt[Im[mu2[3,3]]]},
-            {47, Sqrt[Im[md2[1,1]]]},
-            {48, Sqrt[Im[md2[2,2]]]},
-            {49, Sqrt[Im[md2[3,3]]]} } }
+            {31, SignedAbsSqrt[Im[ml2[1,1]]]},
+            {32, SignedAbsSqrt[Im[ml2[2,2]]]},
+            {33, SignedAbsSqrt[Im[ml2[3,3]]]},
+            {34, SignedAbsSqrt[Im[me2[1,1]]]},
+            {35, SignedAbsSqrt[Im[me2[2,2]]]},
+            {36, SignedAbsSqrt[Im[me2[3,3]]]},
+            {41, SignedAbsSqrt[Im[mq2[1,1]]]},
+            {42, SignedAbsSqrt[Im[mq2[2,2]]]},
+            {43, SignedAbsSqrt[Im[mq2[3,3]]]},
+            {44, SignedAbsSqrt[Im[mu2[1,1]]]},
+            {45, SignedAbsSqrt[Im[mu2[2,2]]]},
+            {46, SignedAbsSqrt[Im[mu2[3,3]]]},
+            {47, SignedAbsSqrt[Im[md2[1,1]]]},
+            {48, SignedAbsSqrt[Im[md2[2,2]]]},
+            {49, SignedAbsSqrt[Im[md2[3,3]]]} } }
 };
