adding default SARHA model files to officially shipped models

--- a/model_files/UMSSM/FlexibleSUSY.m.in
+++ b/model_files/UMSSM/FlexibleSUSY.m.in
@@ -1,6 +1,7 @@
 
 FSModelName = "@CLASSNAME@";
 FSEigenstates = SARAH`EWSB;
+FSDefaultSARAHModel = UMSSM;
 
 MINPAR = { {1, m0},
            {2, m12},
