--- a/model_files/THDMII/FlexibleSUSY.m.in
+++ b/model_files/THDMII/FlexibleSUSY.m.in
@@ -1,6 +1,7 @@
 
 FSModelName = "@CLASSNAME@";
 FSEigenstates = SARAH`EWSB;
+FSDefaultSARAHModel = "THDM-II";
 
 OnlyLowEnergyFlexibleSUSY = True;
 
