overload SetParameter[] for Re[] and Im[] parts

--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -64,6 +64,7 @@ using namespace @ModelName@_info;
 #define PHYSICAL(parameter) physical.parameter
 #define INPUT(parameter) model->get_input().parameter
 #define LOCALINPUT(parameter) input.parameter
+#define MODELPARAMETER(parameter) model->get_##parameter()
 
 #define HIGGS_2LOOP_CORRECTION_AT_AS     two_loop_corrections.higgs_at_as
 #define HIGGS_2LOOP_CORRECTION_AB_AS     two_loop_corrections.higgs_ab_as
