--- a/templates/two_scale_initial_guesser_low_scale_model.cpp.in
+++ b/templates/two_scale_initial_guesser_low_scale_model.cpp.in
@@ -31,6 +31,7 @@ namespace flexiblesusy {
 
 #define INPUTPARAMETER(p) model->get_input().p
 #define MODELPARAMETER(p) model->get_##p()
+#define PHASE(p) model->get_##p()
 #define SM(p) Electroweak_constants::p
 #define MODEL model
 
