--- a/model_files/NMSSMCPV/FlexibleSUSY.m.in
+++ b/model_files/NMSSMCPV/FlexibleSUSY.m.in
@@ -9,25 +9,27 @@ MINPAR = {
     {1, m0},
     {2, m12},
     {3, TanBeta},
-    {4, Sign[vS]},
     {5, Azero}
 };
 
 EXTPAR = {
     {61, LambdaInput},
+    {62, KappaInput},
+    {65, LambdaTimesvSInput},
     {100, etaInput},
     {101, etaSInput}
 };
 
 RealParameters = {};
 
-EWSBOutputParameters = { Re[\[Kappa]], Im[\[Kappa]], Re[T[\[Kappa]]], Im[T[\[Kappa]]], vS };
+EWSBOutputParameters = { mHd2, Im[T[\[Kappa]]], Re[T[\[Kappa]]], Im[T[\[Lambda]]], Re[T[\[Lambda]]] };
 
 SUSYScale = Sqrt[Product[M[Su[i]]^(Abs[ZU[i,3]]^2 + Abs[ZU[i,6]]^2), {i,6}]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
 SUSYScaleInput = {
+    {vS, LambdaTimesvSInput / Re[\[Lambda]]},
     {eta, etaInput},
     {etaS, etaSInput}
 };
@@ -46,10 +48,9 @@ HighScaleInput={
    {mu2, UNITMATRIX[3] m0^2},
    {me2, UNITMATRIX[3] m0^2},
    {mHu2, m0^2},
-   {mHd2, m0^2},
+   {ms2, m0^2},
    {\[Lambda], LambdaInput},
-   {T[\[Kappa]], Azero \[Kappa]},
-   {T[\[Lambda]], Azero LambdaInput},
+   {\[Kappa], KappaInput},
    {MassB, m12},
    {MassWB,m12},
    {MassG,m12}
@@ -71,8 +72,8 @@ InitialGuessAtLowScale = {
    {vd, SM[vev] Cos[ArcTan[TanBeta]]},
    {vu, SM[vev] Sin[ArcTan[TanBeta]]},
    {\[Lambda], LambdaInput},
-   {\[Kappa], 0.1},
-   {vS, 1000},
+   {\[Kappa], KappaInput},
+   {vS, LambdaTimesvSInput / LambdaInput},
    {ms2, SM[MZ]^2},
    {Yu, Automatic},
    {Yd, Automatic},
