initial guess for eta and etaS to make tree-level EWSB eqs solveable

--- a/model_files/NMSSMCPV/FlexibleSUSY.m.in
+++ b/model_files/NMSSMCPV/FlexibleSUSY.m.in
@@ -75,6 +75,8 @@ InitialGuessAtLowScale = {
    {\[Kappa], KappaInput},
    {vS, LambdaTimesvSInput / LambdaInput},
    {ms2, SM[MZ]^2},
+   {eta, etaInput},
+   {etaS, etaSInput},
    {Yu, Automatic},
    {Yd, Automatic},
    {Ye, Automatic}
