renaming numerics.hpp -> numerics2.hpp to avoid naming conflicts

--- a/templates/slha_io.cpp.in
+++ b/templates/slha_io.cpp.in
@@ -22,7 +22,7 @@
 #include "@ModelName@_input_parameters.hpp"
 #include "logger.hpp"
 #include "wrappers.hpp"
-#include "numerics.hpp"
+#include "numerics2.hpp"
 #include "spectrum_generator_settings.hpp"
 #include "lowe.h"
 #include "config.h"
