--- a/templates/two_scale_susy_scale_constraint.cpp.in
+++ b/templates/two_scale_susy_scale_constraint.cpp.in
@@ -37,7 +37,7 @@ namespace flexiblesusy {
 #define PHASE(p) model->get_##p()
 #define BETAPARAMETER(p) beta_functions.get_##p()
 #define BETA(p) beta_##p
-#define SM(p) Electroweak_constants::p
+#define LowEnergyConstant(p) Electroweak_constants::p
 #define STANDARDDEVIATION(p) Electroweak_constants::Error_##p
 #define Pole(p) model->get_physical().p
 #define MODEL model
